--- a/admissions.html
+++ b/admissions.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Academics &mdash; Website by Colorlib</title>
+  <title>THONJE PVT SCHOOL</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -66,10 +66,10 @@
         <div class="d-flex align-items-center">
           <div class="site-logo">
             <a href="index.html" class="d-block">
-              <img src="images/logo.jpg" alt="Image" class="img-fluid">
+              <!-- <img src="images/logo.jpg" alt="Image" class="img-fluid"> -->
             </a>
           </div>
-          
+
           <!-- Nav bar -->
           <div class="mr-auto">
             <nav class="site-navigation position-relative text-right" role="navigation">
@@ -117,7 +117,6 @@
           <div class="row align-items-end">
             <div class="col-lg-7">
               <h2 class="mb-0">Admissions</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
             </div>
           </div>
         </div>
@@ -136,22 +135,21 @@
         <div class="container">
             <div class="row mb-5">
                 <div class="col-lg-6 mb-lg-0 mb-4">
-                    <img src="images/course_6.jpg" alt="Image" class="img-fluid"> 
+                    <img src="images/course_3.jpg" alt="Image" class="img-fluid"> 
                 </div>
                 <div class="col-lg-5 ml-auto align-self-center">
                     <h2 class="section-title-underline mb-5">
-                        <span>College Requirements</span>
+                        <span>Requirements</span>
                     </h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At itaque dolore libero corrupti! Itaque, delectus?</p>
+                    <p>Requirements for someone to be accepted at our school</p>
                     <p>Modi sit dolor repellat esse! Sed necessitatibus itaque libero odit placeat nesciunt, voluptatum totam facere.</p>
 
                     <ol class="ul-check primary list-unstyled">
-                        <li>Accomplished Application Form</li>
-                        <li>High School Report Card </li>
-                        <li>High School Transcript</li>
-                        <li>Certificate of Good Moral Characte</li>
-                        <li>2×2 picture</li>
-                        <li>1×1 picture</li>
+                        <li>complete Application Form</li>
+                        <li>Statement of Results</li>
+                        <li>Recomendation letter</li>
+                        <li>Certificate  if any</li>
+                        <li>Merits+ in all subjects </li>
                     </ol>
 
                 </div>
@@ -180,29 +178,28 @@
         </div>
     </div>
 
-    <div class="section-bg style-1" style="background-image: url('images/hero_1.jpg');">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
-              <span class="icon flaticon-mortarboard"></span>
-              <h3>Our Philosphy</h3>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis recusandae, iure repellat quis delectus ea? Dolore, amet reprehenderit.</p>
-            </div>
-            <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
-              <span class="icon flaticon-school-material"></span>
-              <h3>Academics Principle</h3>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis recusandae, iure repellat quis delectus ea?
-                Dolore, amet reprehenderit.</p>
-            </div>
-            <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
-              <span class="icon flaticon-library"></span>
-              <h3>Key of Success</h3>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis recusandae, iure repellat quis delectus ea?
-                Dolore, amet reprehenderit.</p>
-            </div>
+     <!-- the Philosophical view of the school -->
+     <div class="section-bg style-1" style="background-image: url('images/');">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
+            <span class="icon flaticon-mortarboard"></span>
+            <h3>Our Philosphy</h3>
+            <p>We aim to foster personal growth and development in students. </p>
+          </div>
+          <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
+            <span class="icon flaticon-school-material"></span>
+            <h3>Academics Principle</h3>
+            <p>To provide an environment where students can explore their interests, develop critical thinking skills, and enhance their intellectual abilities.</p>
+          </div>
+          <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
+            <span class="icon flaticon-library"></span>
+            <h3>Key of Success</h3>
+            <p>Hard work is the key to Success</p>
           </div>
         </div>
       </div>
+    </div>
       
 
     <div class="footer">
@@ -250,9 +247,7 @@
           <div class="col-12">
             <div class="copyright">
                 <p>
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" >Colorlib</a>
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                    Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved
                     </p>
             </div>
           </div>
