--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="d-flex align-items-center">
           <div class="site-logo">
             <a href="index.html" class="d-block">
-              <img src="images/logo.jpg" alt="Image" class="img-fluid">
+              <!-- <img src="images/logo.jpg" alt="Image" class="img-fluid"> -->
             </a>
           </div>
 
@@ -157,8 +157,8 @@
               </div>
               <div class="feature-1-content">
                 <h2>Personalize Learning</h2>
-                <p>We provide pupils with a very condusive environment for Learning and group studys</p>
-                <p><a href="#" class="btn btn-primary px-4 rounded-0">Learn More</a></p>
+                <p>We provide pupils with Flexible, Adptable, Relevant Skill Development</p>
+                <p><a href="./about.html" class="btn btn-primary px-4 rounded-0">Learn More</a></p>
               </div>
             </div>
           </div>
@@ -170,6 +170,7 @@
               <div class="feature-1-content">
                 <h2>Tools for Students</h2>
                 <p>We offer upto standard material to our pupils, material to help them even in their personal lives</p>
+                <p>We provide our pipuls with a very condusive environment for Learning and group studys</p>
                 <p><a href="#" class="btn btn-primary px-4 rounded-0">Learn More</a></p>
               </div>
             </div> 
@@ -569,9 +570,7 @@
           <div class="col-12">
             <div class="copyright">
                 <p>
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" >Colorlib</a>
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                    Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved
                     </p>
             </div>
           </div>
