--- a/news-single.html
+++ b/news-single.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Academics &mdash; Website by Colorlib</title>
+  <title>THONJE PVT SCHOOL</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -66,9 +66,10 @@
         <div class="d-flex align-items-center">
           <div class="site-logo">
             <a href="index.html" class="d-block">
-              <img src="images/logo.jpg" alt="Image" class="img-fluid">
+              <!-- <img src="images/logo.jpg" alt="Image" class="img-fluid"> -->
             </a>
           </div>
+
           <!-- Nav bar -->
           <div class="mr-auto">
             <nav class="site-navigation position-relative text-right" role="navigation">
@@ -219,9 +220,7 @@
           <div class="col-12">
             <div class="copyright">
                 <p>
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" >Colorlib</a>
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                    Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved
                     </p>
             </div>
           </div>
