--- a/admissions.html
+++ b/admissions.html
@@ -112,7 +112,7 @@
     </header>
 
     
-    <div class="site-section ftco-subscribe-1 site-blocks-cover pb-4" style="background-image: url('images/bg_1.jpg')">
+    <div class="site-section ftco-subscribe-1 site-blocks-cover pb-4" style="background-image: url('images/.jpg')">
         <div class="container">
           <div class="row align-items-end">
             <div class="col-lg-7">
@@ -142,13 +142,12 @@
                         <span>Requirements</span>
                     </h2>
                     <p>Requirements for someone to be accepted at our school</p>
-                    <p>Modi sit dolor repellat esse! Sed necessitatibus itaque libero odit placeat nesciunt, voluptatum totam facere.</p>
-
+                    <p></p>
                     <ol class="ul-check primary list-unstyled">
                         <li>complete Application Form</li>
                         <li>Statement of Results</li>
                         <li>Recomendation letter</li>
-                        <li>Certificate  if any</li>
+                        <li>Certificates  if any</li>
                         <li>Merits+ in all subjects </li>
                     </ol>
 
@@ -163,15 +162,11 @@
                         <h2 class="section-title-underline mb-5">
                             <span>Transferees</span>
                         </h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At itaque dolore libero corrupti! Itaque, delectus?</p>
-                        <p>Modi sit dolor repellat esse! Sed necessitatibus itaque libero odit placeat nesciunt, voluptatum totam facere.</p>
+                        <p>for someonetranfering from another school to our school</p>
                         <ol class="ul-check primary list-unstyled">
-                                <li>Accomplished Application Form</li>
-                                <li>High School Report Card </li>
-                                <li>High School Transcript</li>
-                                <li>Certificate of Good Moral Characte</li>
-                                <li>2×2 picture</li>
-                                <li>1×1 picture</li>
+                          <li>complete Application Form</li>
+                          <li>Statement of Results</li>
+                          <li>transfer latter</li>
                             </ol>
                     </div>
                 </div>
@@ -205,22 +200,7 @@
     <div class="footer">
       <div class="container">
         <div class="row">
-          <div class="col-lg-3">
-            <p class="mb-4"><img src="images/logo.png" alt="Image" class="img-fluid"></p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae nemo minima qui dolor, iusto iure.</p>  
-            <p><a href="#">Learn More</a></p>
-          </div>
-          <div class="col-lg-3">
-            <h3 class="footer-heading"><span>Our Campus</span></h3>
-            <ul class="list-unstyled">
-                <li><a href="#">Acedemic</a></li>
-                <li><a href="#">News</a></li>
-                <li><a href="#">Our Interns</a></li>
-                <li><a href="#">Our Leadership</a></li>
-                <li><a href="#">Careers</a></li>
-                <li><a href="#">Human Resources</a></li>
-            </ul>
-          </div>
+
           <div class="col-lg-3">
             <h3 class="footer-heading"><span>Our Courses</span></h3>
             <ul class="list-unstyled">
@@ -234,12 +214,14 @@
           <div class="col-lg-3">
               <h3 class="footer-heading"><span>Contact</span></h3>
               <ul class="list-unstyled">
-                  <li><a href="#">Help Center</a></li>
-                  <li><a href="#">Support Community</a></li>
-                  <li><a href="#">Press</a></li>
-                  <li><a href="#">Share Your Story</a></li>
-                  <li><a href="#">Our Supporters</a></li>
+                <a href="#" class="small mr-3"><span class="icon-phone2 mr-2"></span> 10 20 123 456</a><br>
+                <a href="#" class="small mr-3"><span class="icon-envelope-o mr-2"></span> info@mydomain.com</a> 
               </ul>
+          </div>
+          <div class="col-lg-6">
+            <h3 class="footer-heading"><span>Our Campus</span></h3>
+            <p>Our Campus is located along los Agels road.</p>
+            <p>At Makeni Simpson take a right into the dust road, follow it and you will eventauly land outside our gate.</p>
           </div>
         </div>
 
