--- a/index.html
+++ b/index.html
@@ -89,7 +89,10 @@
                 </li>
                 <li>
                     <a href="contact.html" class="nav-link text-left">Contact</a>
-                  </li>
+                </li>
+                <li>
+                  <a href="./News.html" class="nav-link text-left">news</a>
+                </li>
               </ul>                                                                                                                                                                                                                                                                                          </ul>
             </nav>
 
@@ -461,7 +464,7 @@
     </div>
     
     <!-- the News section -->
-    <div class="news-updates">
+    <!-- <div class="news-updates">
       <div class="container">
          
         <div class="col-lg-50">
@@ -522,7 +525,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
 
      <!-- Footer section -->
