--- a/news-single.html
+++ b/news-single.html
@@ -116,7 +116,7 @@
         <div class="container">
           <div class="row align-items-end">
             <div class="col-lg-7">
-              <h2 class="mb-0">Campus Camping and Learning Session</h2>
+              <h2 class="mb-0">Campus Learning Session</h2>
               <p>June 6, 2019 by Admin</p>
             </div>
           </div>
