--- a/News.html
+++ b/News.html
@@ -89,7 +89,10 @@
                 </li>
                 <li>
                     <a href="contact.html" class="nav-link text-left">Contact</a>
-                  </li>
+                </li>
+                <li>
+                  <a href="./News.html" class="nav-link text-left">news</a>
+                </li>
               </ul>                                                                                                                                                                                                                                                                                          </ul>
             </nav>
 
@@ -110,6 +113,7 @@
       </div>
 
     </header>
+
 <!-- the News section -->
     <div class="news-updates">
       <div class="container">
