--- a/register.html
+++ b/register.html
@@ -89,7 +89,10 @@
                 </li>
                 <li>
                     <a href="contact.html" class="nav-link text-left">Contact</a>
-                  </li>
+                </li>
+                <li>
+                  <a href="./News.html" class="nav-link text-left">news</a>
+                </li>
               </ul>                                                                                                                                                                                                                                                                                          </ul>
             </nav>
 
