--- a/News.html
+++ b/News.html
@@ -113,6 +113,16 @@
       </div>
 
     </header>
+    
+    <div class="site-section ftco-subscribe-1 site-blocks-cover pb-4">
+        <div class="container">
+          <div class="row align-items-end justify-content-center text-center">
+            <div class="col-lg-7">
+              <h2 class="mb-0">News letter</h2>
+            </div>
+          </div>
+        </div>
+      </div> 
 
 <!-- the News section -->
     <div class="news-updates">
