--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@
     </header>
 
     
-    <div class="site-section ftco-subscribe-1 site-blocks-cover pb-4" style="background-image: url('images/')">
+    <div class="site-section ftco-subscribe-1 site-blocks-cover pb-4">
         <div class="container">
           <div class="row align-items-end">
             <div class="col-lg-7">
