--- a/contact.html
+++ b/contact.html
@@ -115,12 +115,11 @@
     </header>
 
     
-    <div class="site-section ftco-subscribe-1 site-blocks-cover pb-4" style="background-image: url('images/bg_1.jpg')">
+    <div class="site-section ftco-subscribe-1 site-blocks-cover pb-4">
         <div class="container">
           <div class="row align-items-end">
             <div class="col-lg-7">
               <h2 class="mb-0">Contact</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
             </div>
           </div>
         </div>
