--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
     </header>
 
-    
+    <!-- section 1 -->
     <div class="hero-slide owl-carousel site-blocks-cover">
       <div class="intro-section" style="background-image: url('images/hero_1.jpg');">
         <div class="container">
