--- a/news-single.html
+++ b/news-single.html
@@ -112,7 +112,7 @@
     </header>
 
     
-    <div class="site-section ftco-subscribe-1 site-blocks-cover pb-4" style="background-image: url('images/bg_1.jpg')">
+    <div class="site-section ftco-subscribe-1 site-blocks-cover pb-4">
         <div class="container">
           <div class="row align-items-end">
             <div class="col-lg-7">
