--- a/login.html
+++ b/login.html
@@ -165,58 +165,46 @@
 
     
 
-    <div class="footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-3">
-            <p class="mb-4"><img src="images/logo.png" alt="Image" class="img-fluid"></p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae nemo minima qui dolor, iusto iure.</p>  
-            <p><a href="#">Learn More</a></p>
-          </div>
-          <div class="col-lg-3">
-            <h3 class="footer-heading"><span>Our Campus</span></h3>
-            <ul class="list-unstyled">
-                <li><a href="#">Acedemic</a></li>
-                <li><a href="#">News</a></li>
-                <li><a href="#">Our Interns</a></li>
-                <li><a href="#">Our Leadership</a></li>
-                <li><a href="#">Careers</a></li>
-                <li><a href="#">Human Resources</a></li>
-            </ul>
-          </div>
-          <div class="col-lg-3">
-            <h3 class="footer-heading"><span>Our Courses</span></h3>
-            <ul class="list-unstyled">
-                <li><a href="#">Math</a></li>
-                <li><a href="#">English</a></li>
-                <li><a href="#">Science</a></li>
-                <li><a href="#">Accounts</a></li>
-                <li><a href="#">Biology</a></li>
-            </ul>
-          </div>
-          <div class="col-lg-3">
-              <h3 class="footer-heading"><span>Contact</span></h3>
-              <ul class="list-unstyled">
-                  <li><a href="#">Help Center</a></li>
-                  <li><a href="#">Support Community</a></li>
-                  <li><a href="#">Press</a></li>
-                  <li><a href="#">Share Your Story</a></li>
-                  <li><a href="#">Our Supporters</a></li>
-              </ul>
-          </div>
-        </div>
+  <!-- Footer section -->
+  <div class="footer">
+    <div class="container">
+      <div class="row">
 
-        <div class="row">
-          <div class="col-12">
-            <div class="copyright">
-                <p>
-                    Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved
-                    </p>
-            </div>
+        <div class="col-lg-3">
+          <h3 class="footer-heading"><span>Our Courses</span></h3>
+          <ul class="list-unstyled">
+              <li><a href="#">Math</a></li>
+              <li><a href="#">English</a></li>
+              <li><a href="#">Science</a></li>
+              <li><a href="#">Accounts</a></li>
+              <li><a href="#">Biology</a></li>
+          </ul>
+        </div>
+        <div class="col-lg-3">
+            <h3 class="footer-heading"><span>Contact</span></h3>
+            <ul class="list-unstyled">
+              <a href="#" class="small mr-3"><span class="icon-phone2 mr-2"></span> 10 20 123 456</a><br>
+              <a href="#" class="small mr-3"><span class="icon-envelope-o mr-2"></span> info@mydomain.com</a> 
+            </ul>
+        </div>
+        <div class="col-lg-6">
+          <h3 class="footer-heading"><span>Our Campus</span></h3>
+          <p>Our Campus is located along los Agels road.</p>
+          <p>At Makeni Simpson take a right into the dust road, follow it and you will eventauly land outside our gate.</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-12">
+          <div class="copyright">
+              <p>
+                  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved
+                  </p>
           </div>
         </div>
       </div>
     </div>
+  </div>
     
 
   </div>
