--- a/teachers.html
+++ b/teachers.html
@@ -93,6 +93,9 @@
                 <li>
                   <a href="./News.html" class="nav-link text-left">news</a>
                 </li>
+                <li>
+                  <a href="./location.html" class="nav-link text-left">Location</a>
+                </li>
               </ul>                                                                                                                                                                                                                                                                                          </ul>
             </nav>
 
