--- a/location.html
+++ b/location.html
@@ -140,7 +140,12 @@
     <!-- Google map section -->
     <div>
         <h1 style="text-align: center;">Google Map</h1>
-        <map name="thonje"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3845.706377758521!2d28.236836074387455!3d-15.446390985146426!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1940f3a0923bed35%3A0x3013e5c727cf5e2d!2sThonje%20private%20school!5e0!3m2!1sen!2szm!4v1687356310457!5m2!1sen!2szm" width="1350" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></map>
+        <map name="thonje"><iframe 
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3845.706377758521!2d28.
+            236836074387455!3d-15.446390985146426!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.
+            1!3m3!1m2!1s0x1940f3a0923bed35%3A0x3013e5c727cf5e2d!2sThonje%20private%20school!5e0!3m2!1sen!2szm!4v1687356310457!5m2!1sen!2szm" 
+            width="1350" height="450" style="border:0;" allowfullscreen="" loading="lazy" 
+            referrerpolicy="no-referrer-when-downgrade"></iframe></map>
     </div>
     
 
@@ -190,7 +195,10 @@
   <!-- .site-wrap -->
 
   <!-- loader -->
-  <div id="loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#51be78"/></svg></div>
+  <div id="loader" class="show fullscreen"><svg class="circular" 
+    width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" s
+    troke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" 
+    stroke-width="4" stroke-miterlimit="10" stroke="#51be78"/></svg></div>
 
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/jquery-migrate-3.0.1.min.js"></script>
