--- a/admissions.html
+++ b/admissions.html
@@ -45,6 +45,7 @@
     </div>
 
 
+    <!-- Top contact section -->
     <div class="py-2 bg-light">
       <div class="container">
         <div class="row align-items-center">
@@ -60,6 +61,8 @@
         </div>
       </div>
     </div>
+
+    <!-- Header section -->
     <header class="site-navbar py-4 js-sticky-header site-navbar-target" role="banner">
 
       <div class="container">
@@ -168,7 +171,7 @@
                         <h2 class="section-title-underline mb-5">
                             <span>Transferees</span>
                         </h2>
-                        <p>for someonetranfering from another school to our school</p>
+                        <p>for someone tranfering from another school to our school</p>
                         <ol class="ul-check primary list-unstyled">
                           <li>complete Application Form</li>
                           <li>Statement of Results</li>
@@ -203,6 +206,7 @@
     </div>
       
 
+    <!-- Footer section -->
     <div class="footer">
       <div class="container">
         <div class="row">
