--- a/teachers.html
+++ b/teachers.html
@@ -153,59 +153,62 @@
               <div class="feature-1 border person text-center">
                   <!-- <img src="images/person_1.jpg" alt="Image" class="img-fluid"> -->
                 <div class="feature-1-content">
-                  <h2>Craig Daniel</h2>
-                  <span class="position mb-3 d-block">Math Teacher</span>    
+                  <h2>Mr Muleya</h2>
+                  <span class="position mb-3 d-block">Msenior Teacher</span>    
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit morbi hendrerit elit</p>
                 </div>
               </div>
             </div>
-            <div class="col-lg-4 col-md-6 mb-5 mb-lg-5">
-              <div class="feature-1 border person text-center">
-                  <!-- <img src="images/person_2.jpg" alt="Image" class="img-fluid"> -->
-                <div class="feature-1-content">
-                  <h2>Taylor Simpson</h2>
-                  <span class="position mb-3 d-block">Math Teacher</span>    
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit morbi hendrerit elit</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 mb-5 mb-lg-5">
-              <div class="feature-1 border person text-center">
-                  <!-- <img src="images/person_3.jpg" alt="Image" class="img-fluid"> -->
-                <div class="feature-1-content">
-                  <h2>Jonas Tabble</h2>
-                  <span class="position mb-3 d-block">Math Teacher</span>    
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit morbi hendrerit elit</p>
-                </div>
-              </div>
-            </div>
-  
             <div class="col-lg-4 col-md-6 mb-5 mb-lg-5">
   
               <div class="feature-1 border person text-center">
-                  <!-- <img src="images/person_4.jpg" alt="Image" class="img-fluid"> -->
+                  <!-- <img src="images/person_1.jpg" alt="Image" class="img-fluid"> -->
                 <div class="feature-1-content">
-                  <h2>Craig Daniel</h2>
+                  <h2>Mr Muleya</h2>
                   <span class="position mb-3 d-block">Math Teacher</span>    
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit morbi hendrerit elit</p>
                 </div>
               </div>
             </div>
             <div class="col-lg-4 col-md-6 mb-5 mb-lg-5">
+  
               <div class="feature-1 border person text-center">
-                  <!-- <img src="images/person_2.jpg" alt="Image" class="img-fluid"> -->
+                  <!-- <img src="images/person_1.jpg" alt="Image" class="img-fluid"> -->
                 <div class="feature-1-content">
-                  <h2>Taylor Simpson</h2>
+                  <h2>Mr Muleya</h2>
                   <span class="position mb-3 d-block">Math Teacher</span>    
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit morbi hendrerit elit</p>
                 </div>
               </div>
             </div>
             <div class="col-lg-4 col-md-6 mb-5 mb-lg-5">
+  
               <div class="feature-1 border person text-center">
-                  <!-- <img src="images/person_3.jpg" alt="Image" class="img-fluid"> -->
+                  <!-- <img src="images/person_1.jpg" alt="Image" class="img-fluid"> -->
                 <div class="feature-1-content">
-                  <h2>Jonas Tabble</h2>
+                  <h2>Mr Muleya</h2>
+                  <span class="position mb-3 d-block">Math Teacher</span>    
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit morbi hendrerit elit</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 mb-5 mb-lg-5">
+  
+              <div class="feature-1 border person text-center">
+                  <!-- <img src="images/person_1.jpg" alt="Image" class="img-fluid"> -->
+                <div class="feature-1-content">
+                  <h2>Mr Muleya</h2>
+                  <span class="position mb-3 d-block">Math Teacher</span>    
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit morbi hendrerit elit</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 mb-5 mb-lg-5">
+  
+              <div class="feature-1 border person text-center">
+                  <!-- <img src="images/person_1.jpg" alt="Image" class="img-fluid"> -->
+                <div class="feature-1-content">
+                  <h2>Mr Muleya</h2>
                   <span class="position mb-3 d-block">Math Teacher</span>    
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit morbi hendrerit elit</p>
                 </div>
