--- a/teachers.html
+++ b/teachers.html
@@ -154,7 +154,7 @@
                   <!-- <img src="images/person_1.jpg" alt="Image" class="img-fluid"> -->
                 <div class="feature-1-content">
                   <h2>Mr Muleya</h2>
-                  <span class="position mb-3 d-block">Msenior Teacher</span>    
+                  <span class="position mb-3 d-block">Senior Teacher</span>    
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit morbi hendrerit elit</p>
                 </div>
               </div>
@@ -165,7 +165,7 @@
                   <!-- <img src="images/person_1.jpg" alt="Image" class="img-fluid"> -->
                 <div class="feature-1-content">
                   <h2>Mr Muleya</h2>
-                  <span class="position mb-3 d-block">Math Teacher</span>    
+                  <span class="position mb-3 d-block">Senior Teacher</span>    
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit morbi hendrerit elit</p>
                 </div>
               </div>
@@ -176,7 +176,7 @@
                   <!-- <img src="images/person_1.jpg" alt="Image" class="img-fluid"> -->
                 <div class="feature-1-content">
                   <h2>Mr Muleya</h2>
-                  <span class="position mb-3 d-block">Math Teacher</span>    
+                  <span class="position mb-3 d-block">Senior Teacher</span>    
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit morbi hendrerit elit</p>
                 </div>
               </div>
@@ -187,7 +187,7 @@
                   <!-- <img src="images/person_1.jpg" alt="Image" class="img-fluid"> -->
                 <div class="feature-1-content">
                   <h2>Mr Muleya</h2>
-                  <span class="position mb-3 d-block">Math Teacher</span>    
+                  <span class="position mb-3 d-block">Senior Teacher</span>    
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit morbi hendrerit elit</p>
                 </div>
               </div>
@@ -198,7 +198,7 @@
                   <!-- <img src="images/person_1.jpg" alt="Image" class="img-fluid"> -->
                 <div class="feature-1-content">
                   <h2>Mr Muleya</h2>
-                  <span class="position mb-3 d-block">Math Teacher</span>    
+                  <span class="position mb-3 d-block">Senior Teacher</span>    
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit morbi hendrerit elit</p>
                 </div>
               </div>
@@ -209,7 +209,7 @@
                   <!-- <img src="images/person_1.jpg" alt="Image" class="img-fluid"> -->
                 <div class="feature-1-content">
                   <h2>Mr Muleya</h2>
-                  <span class="position mb-3 d-block">Math Teacher</span>    
+                  <span class="position mb-3 d-block">Senior Teacher</span>    
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit morbi hendrerit elit</p>
                 </div>
               </div>
